# rover-arduino

./: Buffer.h  CMakeLists.txt  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h  MessageProcessor.cpp  MessageProcessor.h  Protocol.h  README.md  User_Setup.h  arduino.cpp  rover_arduino.cpp  rover_arduino.ino
cmake/Platform/: Arduino.cmake
etl/: type_traits.h
etl/profiles/: arduino_arm.h
protocol/: TransportMessage.h
utils/: Reader.h  Writer.h  crc16.cpp  crc16.h
utils/memory/: Buffer.cpp  Buffer.h  BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h
utils/stream/: StreamReader.h  StreamWriter.h
